deployment-microservice/rdi-redis-delegate.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harness-delegate-ng

---

# If delegate needs to use a proxy, please follow instructions available in the documentation
# https://ngdocs.harness.io/article/5ww21ewdt8-configure-delegate-proxy-settings

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    harness.io/name: rdi-redis-delegate
  name: rdi-redis-delegate
  namespace: harness-delegate-ng
spec:
  replicas: 1
  minReadySeconds: 120
  selector:
    matchLabels:
      harness.io/name: rdi-redis-delegate
  template:
    metadata:
      labels:
        harness.io/name: rdi-redis-delegate
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3460"
        prometheus.io/path: "/api/metrics"
    spec:
      terminationGracePeriodSeconds: 600
      restartPolicy: Always
      containers:
        - image: harness/delegate:24.04.82709
          imagePullPolicy: Always
          name: delegate
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 0
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "2048Mi"
            requests:
              cpu: "0.5"
              memory: "2048Mi"
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3460
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /api/health
              port: 3460
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 15
