deployment-microservice/full_demo_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rdi-demo
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rdi-cpf-high-volume-deployment
  namespace: rdi-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rdi-cpf-high-volume
  template:
    metadata:
      labels:
        app: rdi-cpf-high-volume
    spec:
      containers:
        - name: rdi-cpf-high-volume
          image: gacerioni/rdi-cpf-high-volume:0.3.0-GABS
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "1"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /person
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 30
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /person
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 10
          startupProbe:
            httpGet:
              path: /person
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 10


---

apiVersion: v1
kind: Service
metadata:
  name: rdi-cpf-high-volume-service
  namespace: rdi-demo
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
  selector:
    app: rdi-cpf-high-volume

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdi-cpf-high-volume-ingress
  namespace: rdi-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /rdi-cpf-high-volume(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: rdi-cpf-high-volume-service
                port:
                  number: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rdi-swagger-ui-ingress
  namespace: rdi-demo
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /swagger-ui
            pathType: Prefix
            backend:
              service:
                name: rdi-cpf-high-volume-service
                port:
                  number: 8080
